<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Flyn Note</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_generate_pdf">Generate PDF</string>
    <string name="action_sort_notebooks">Sort the notebooks</string>
    <string name="txt_teste_card">Description of Card</string>
    <string name="menu_home">Home</string>
    <string name="menu_categorias">Categories</string>
    <string name="menu_arquivo">Archive</string>
    <string name="menu_favoritos">Favorites</string>
    <string name="menu_configuracoes">Settings</string>
    <string name="menu_contato">Contact</string>
    <string name="tags">Tags</string>
    <string name="txt_tags">Tags - uses , ; . # to split the tags (Optional)</string>
    <string name="action_search">Search</string>
    <string name="action_search_hint_caderno">Search notebooks, sheet or tag</string>

    <string name="transition_name_name">transition:NAME</string>
    <string name="transition_color">transition:COLOR</string>
    <string name="transition_image">transition:IMAGE</string>
    <string name="criar_caderno">Create Notebook</string>
    <string name="txt_icon">Icon</string>
    <string name="txt_cor">Color</string>
    <string name="txt_description">Description (Optional)</string>
    <string name="txt_title">Title</string>
    <string name="txt_title_folha">Title (Optional)</string>
    <string name="add_folha">Add sheet</string>
    <string name="txt_criar_caderno">Create</string>
    <string name="txt_export_to_gallery">Export to gallery</string>
    <string name="txt_gallery">Gallery</string>
    <string name="txt_camera">Camera</string>

    <string name="action_edit_caderno">Edit Notebook</string>
    <string name="action_delete_caderno">Delete Notebook</string>
    <string name="action_imprimir_caderno">Print Notebook</string>
    <string name="action_archive">Archive</string>

    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="alert_attention">Caution!</string>
    <string name="alert_mensage_img">Do you want to replace the current image?</string>

    <string name="alert_empty_img">Take a picture or choice from gallery!</string>
    <string name="txt_edit">Edit</string>
    <string name="txt_delete_paper">Delete sheet</string>
    <string name="txt_share_paper">Share sheet</string>

    <string name="txt_info">Informations</string>

    <string name="alert_delete_paper_warning">Do you want delete the sheet? (The image will be deleted too)</string>
    <string name="alert_archive_notebook_warning">Do you want archive the notebook?</string>
    <string name="alert_unarchive_notebook_warning">Do you want unarchive the notebook?</string>
    <string name="alert_folha_deletada">Sheet deleted!</string>
    <string name="alert_caderno_deletado">Notebook deleted!</string>
    <string name="alert_caderno_arquivado">Notebook archived!</string>
    <string name="alert_caderno_desarquivado">Notebook unarchived!</string>


    <string name="txt_editar_caderno">Edit</string>
    <string name="txt_error_file_not_found">Problem! Please select other image.</string>
    <string name="txt_mensage_remove_image">This image has been deleted, please select another image.</string>
    <string name="txt_plus">Plus</string>

    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="sobre">About</string>
    <string name="author">By Marlon Baptista de Quadros</string>
    <string name="send_to">Share on...</string>
    <string name="txt_alterando">Changing...</string>
    <string name="txt_msg_email">You do not have email app installed.</string>
    <string name="title_msg_enviar_email">Send email...</string>
    <string name="my_email">marlonbquadros@gmail.com</string>
    <string name="msg_erro_menu">Ops! Something wrong.</string>
    <string name="alert_no_paper">This notebook do not have leaves.</string>
    <string name="txt_title_async_pdf">Generating</string>
    <string name="txt_message_async_pdf">Generating PDF...</string>
    <string name="alert_no_pdf_reader">You do not have PDF Reader installed.</string>
    <string name="txt_open_file">Open File</string>
    <string name="txt_error_pdf_io">An error occurred while generating the PDF.</string>

    <string name="txt_meus_cadernos">My Notebooks</string>
    <string name="txt_cancelar">Cancel</string>
    <string name="txt_add_folha">Add</string>

    <string name="txt_date">Date</string>
    <string name="txt_choice_color">Choice a color</string>
    <string name="txt_title_msg">The title cannot be empty.</string>
    <string name="date_format">MM/dd/yyyy</string>
    <string name="time_stamp">yyyyddMM_HHmmss</string>
    <string name="time_stamp_hour">HH:mm:ss MM/dd/yyyy</string>
    <string name="txt_generate_by">Generated by Flyn Note</string>
    <string name="txt_summary">Table of Contents</string>

    <string-array name="list_about">
        <item>Twitter</item>
        <item>Resources</item>
        <item>Rate this app</item>
        <item>Site - http://lab11.info/</item>
        <item>Github</item>
    </string-array>

    <string-array name="list_recursos">
        <item>Joda Time</item>
        <item>Google Icons</item>
        <item>Circle Image View</item>
        <item>iconmonstr</item>
    </string-array>

    <string name="title_activity_notes">Sheets</string>
    <string name="title_activity_camera">Camera</string>
    <string name="title_activity_third_licenses">Resources</string>
    <string name="title_activity_criar_caderno">Create Notebook</string>
    <string name="title_activity_folha">Sheet</string>
    <string name="title_activity_criar_folha">Add Sheet</string>
    <string name="title_activity_tags">Tags</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_editar_folha">Edit Sheet</string>
    <string name="title_activity_editar_caderno">Edit Notebook</string>
    <string name="title_activity_icon_picker">Choice an icon</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_search_tag">Search Tag</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_tutorial">Tutorial</string>
    <string name="title_activity_arquivados">Archive</string>
    <string name="action_unarchive">Unarchive</string>

    <string name="type_title">fonts/Roboto-Medium.ttf</string>
    <string name="type_rest">fonts/RobotoCondensed-Regular.ttf</string>
    <string name="txt_got_it">GOT IT</string>
    <string name="txt_no_notebook">Ready to start? Click on the button to create a new notebook.</string>
    <string name="txt_first_camera">Here you can take a quick picture from your camera, without title or tags.
        You can edit later.</string>
    <string name="txt_first_sheet">If you prefer, add title, tags or even choice a image from gallery, here it\'s your place.</string>

    <string name="txt_tut_sheet_gallery">Press here if you want add a picture from your gallery or...</string>
    <string name="txt_tut_sheet_camera">press here to take a picture.</string>


    <!-- Necessita de tradução!! -->
    <string name="tut_desc_01">Bem vindo ao Flyn Note. Organize suas fotos de estudos de uma forma fácil e rápida.</string>
    <string name="tut_desc_02">Bem vindo ao Flyn Note. Organize suas fotos de estudos de uma forma fácil e rápida.</string>
    <string name="tut_desc_03">Bem vindo ao Flyn Note. Organize suas fotos de estudos de uma forma fácil e rápida.</string>
    <string name="tut_desc_04">Bem vindo ao Flyn Note. Organize suas fotos de estudos de uma forma fácil e rápida.</string>
    <string name="tut_desc_05">Bem vindo ao Flyn Note. Organize suas fotos de estudos de uma forma fácil e rápida.</string>
    <string name="tut_desc_06">Bem vindo ao Flyn Note. Organize suas fotos de estudos de uma forma fácil e rápida.</string>

    <string name="txt_tutorial">Tutorial</string>
    <string name="txt_skip">Skip</string>

    <string name="txt_canceled_add_sheet">Add sheet canceled!</string>
    <string name="txt_canceled_edit_sheet">Edit sheet canceled!</string>

    <string name="txt_loading_image">Loading picture, please wait.</string>
    <string name="title_dialog_sort_notebooks">Sort...</string>


    <string name="txt_r_last_modification">Last Modification ↓</string>
    <string name="txt_l_last_modification">Last Modification ↑</string>
    <string name="txt_data_criacao_r">Creation Date ↓</string>
    <string name="txt_data_criacao_l">Creation Date ↑</string>
    <string name="txt_ordem_alfabetica">Title (A to Z)</string>

</resources>
