<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.lab11.nolram.cadernocamera.NotesActivity">
    <!--<item android:id="@+id/action_add_folha"
        android:icon="@drawable/ic_note_add_white"
        android:title="@string/add_folha"
        app:showAsAction="ifRoom" />-->

    <item android:id="@+id/action_generate_pdf"
        android:icon="@drawable/ic_picture_as_pdf_white"
        android:title="@string/action_generate_pdf"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_edit_caderno"
        android:title="@string/action_edit_caderno"
        app:showAsAction="never" />

    <item android:id="@+id/action_delete_caderno"
        android:title="@string/action_delete_caderno"
        app:showAsAction="never" />

</menu>
