<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lab11.nolram.cadernocamera.EditarFolhaActivityFragment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/cor_forte"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:elevation="4dp" />

    <LinearLayout
        android:layout_below="@id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:id="@+id/edtxt_titulo_folha"
                android:hint="@string/txt_title"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_imagem"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Imagem"/>

        <Button
            android:drawableTop="@drawable/ic_photo_camera_black_24dp"
            android:id="@+id/btn_camera"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_camera"/>
        <!--
    <LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_alignParentBottom="true">
        </Button>
        <Button
            android:id="@+id/btn_galeria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_gallery">
        </Button>
    </LinearLayout>-->

        <ImageView
            android:id="@+id/img_thumb"
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:background="@null"
            android:clickable="true"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:hint="@string/tags"
                android:id="@+id/edtxt_tags"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Editar"
            android:id="@+id/btn_adicionar_folha" />
    </LinearLayout>

</RelativeLayout>
