<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/cl_criar_folha"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_backdrop_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp">

            <ImageView
                android:id="@+id/img_thumb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"
                android:src="@drawable/header_image"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:clickable="true"
        android:id="@+id/fab_gal"
        android:layout_marginEnd="80dp"
        app:layout_anchor="@+id/appbar"
        android:layout_marginRight="80dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchorGravity="bottom|right|end"
        android:src="@drawable/ic_collections_white_24dp"/>

    <android.support.design.widget.FloatingActionButton
        android:clickable="true"
        android:id="@+id/fab_cam"
        app:layout_anchor="@id/appbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_anchorGravity="bottom|right|end"
        android:src="@drawable/ic_camera_alt_white_24dp"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:orientation="vertical"
            android:layout_below="@id/toolbar"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_below="@id/toolbar"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:textSize="30sp"
                        android:layout_height="55dp"
                        android:layout_width="fill_parent"
                        android:id="@+id/edtxt_titulo_folha"
                        android:hint="@string/txt_title_folha"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:textSize="20sp"
                        android:hint="@string/txt_tags"
                        android:id="@+id/edtxt_tags"/>
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    android:paddingBottom="30dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/txt_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:layout_above="@+id/date_chooser"
                        android:clickable="true"
                        android:text="@string/txt_date"/>

                    <Button
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_date"
                        android:textSize="20sp"
                        android:id="@+id/date_chooser"
                        style="@style/SpinnerButtonStyle" />

                    <!--<TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:text="00:00"
                        android:paddingTop="15dp"
                        android:paddingBottom="30dp"
                        android:layout_alignParentRight="true"/>-->

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/LinearLayout02"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:layout_alignParentBottom="true">
                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_cancelar"
                        android:layout_margin="10dp"
                        android:theme="@style/ButtonCancel"
                        android:textColor="@color/branco"
                        android:id="@+id/btn_cancelar"
                        android:layout_weight="1"/>
                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_add_folha"
                        android:theme="@style/ButtonConfirm"
                        android:textColor="@color/branco"
                        android:layout_margin="10dp"
                        android:id="@+id/btn_adicionar_folha"
                        android:layout_weight="1"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
